[#18]: Update entity mapping & test fixes